--- a/src/EFSecondLevelCache.Core/EFSecondLevelCache.Core.csproj
+++ b/src/EFSecondLevelCache.Core/EFSecondLevelCache.Core.csproj
@@ -4,6 +4,7 @@
     <VersionPrefix>2.6.4</VersionPrefix>
     <Authors>Vahid Nasiri</Authors>
     <TargetFrameworks>netstandard2.1;netstandard1.3;net451;net461;netstandard2.0</TargetFrameworks>
+	<TargetFrameworks Condition="'$(OS)' != 'Windows_NT'">netstandard2.1;netstandard1.3;netstandard2.0</TargetFrameworks>
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
     <AssemblyName>EFSecondLevelCache.Core</AssemblyName>
     <PackageId>EFSecondLevelCache.Core</PackageId>
