--- a/.github/workflows/nuget.yml
+++ b/.github/workflows/nuget.yml
@@ -12,7 +12,7 @@ jobs:
     - name: Setup .NET Core
       uses: actions/setup-dotnet@v1
       with:
-        dotnet-version: 3.0.100-rc1-014190
+        dotnet-version: 3.0.100
     - name: Build NuGet Package
       run: dotnet pack ./src/EFSecondLevelCache.Core/EFSecondLevelCache.Core.csproj --configuration Release
     - name: Deploy NuGet Package
